# VoucherReg

./: .gitignore  AGENT.md
backend/: .env.example  .gitignore  AGENT.md  API_CONTRACT.md  DB_SCHEMA.md  Dockerfile  MVP_SCOPE.md  README.md  SPEC_PLAN.md  TASK_BOARD.md  WECHAT_MINI_INTEGRATION_README.md  docker-compose.yml  fastapi_wechat_codex_bootstrap_prompt.md  make_scan_version.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_voucher_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  error_handlers.py  router.py
backend/app/api/routes/: auth.py  downloads.py  files.py  voucher_tasks.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/db/: session.py
backend/app/models/: __init__.py  voucher_page.py  voucher_task.py
backend/app/schemas/: auth.py  base.py  common.py  voucher_task.py
backend/app/services/: voucher_task_service.py
backend/app/services/auth/: __init__.py  token.py  wechat.py
backend/app/services/image/: __init__.py  scan_preprocessor.py  scanner.py
backend/app/services/ocr/: __init__.py  base.py  mock.py  rapidocr.py
backend/app/services/parsing/: __init__.py  parser.py
backend/app/services/pdf/: __init__.py  service.py
backend/app/utils/: casing.py  filename.py
backend/scripts/: run_dev.py  run_dev.sh
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_voucher_flow.py
backend/tests/unit/: test_document_scanner.py  test_filename_utils.py  test_local_storage_service.py  test_parsing_service.py  test_rapidocr_service.py
(+33 files in other folders)
