[project]
name = "voucher-backend"
version = "0.1.0"
description = "FastAPI backend for voucher capture, OCR parsing, and PDF generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.1,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "rapidocr>=3.6.0,<4.0.0",
  "onnxruntime>=1.20.0,<2.0.0",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "Pillow>=10.3.0,<11.0.0",
  "reportlab>=4.2.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.4.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
